avoid horizontal scroll on index - loader container isuue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -356,9 +356,13 @@ nav .function__btn:hover {
   90% {
     transform: translateY(0%);
   }
+  99% {
+    height: 100%;
+  }
   100% {
     opacity: 0;
     transform: translateY(-100%);
+    height: 0;
   }
 }
 
