--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -118,9 +118,14 @@
         90% {
             transform: translateY(0%);
         }
+
+        99% {
+            height:100%;
+        }
         100% {
             opacity: 0;
             transform: translateY(-100%);
+            height: 0;
         }
     }
 }
